foundation select box added

--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,6 @@
     Weiss 2012
 
 ============================================================================= */
-/* ============================================================================
-   Create CSS Triangles
-============================================================================ */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, nav, section {
   display: block;
@@ -43,6 +40,7 @@ h1, h2,
 .h1, .h2,
 h3, h4, h5, h6,
 .h3, .h4, .h5, .h6 {
+  margin: 0;
   font-weight: bold;
 }
 
@@ -92,6 +90,7 @@ hr, .hr {
 }
 
 p, pre, blockquote, table {
+  margin: 0;
   margin-bottom: 1.286em;
 }
 
@@ -110,10 +109,6 @@ em, i, cite {
 
 a {
   color: #0099ff;
-}
-a:visited {
-  color: #0099ff;
-  outline: 1px dotted;
 }
 a:hover, a:active {
   color: #4db8ff;
@@ -361,7 +356,6 @@ input::-moz-focus-inner {
 
 /* form support */
 .form__row {
-  overflow: hidden;
   padding: .4em 0;
 }
 
@@ -412,14 +406,14 @@ figure {
 /* ============================================================================
     1.5 Basic masterclasses
 ============================================================================= */
-.weiss-cf:before, .weiss-cf:after {
+.weiss-cf:before, .form__row:before, .weiss-cf:after, .form__row:after {
   content: "";
   display: table;
 }
-.weiss-cf:after {
+.weiss-cf:after, .form__row:after {
   clear: both;
 }
-.ie6-7 .weiss-cf {
+.ie6-7 .weiss-cf, .ie6-7 .form__row {
   zoom: 1;
 }
 
@@ -528,9 +522,6 @@ div.bx-core-admin-dialog-content tr {
     
     2. Specific html tags support
 ============================================================================= */
-/* ============================================================================
-   Create CSS Triangles
-============================================================================ */
 /* science */
 abbr, acronym {
   border-bottom: 1px dotted #3a3739;
@@ -598,9 +589,6 @@ ins {
 
     3. PAGE LAYOUT
 ============================================================================= */
-/* ============================================================================
-   Create CSS Triangles
-============================================================================ */
 body {
   font-size: 14px;
   line-height: 1.286em;
@@ -745,9 +733,6 @@ body {
     4. COMMON (Design specific rules)
 ============================================================================= */
 /* ============================================================================
-   Create CSS Triangles
-============================================================================ */
-/* ============================================================================
     4.1 Header
 ============================================================================= */
 /* @group Site branding
@@ -813,9 +798,6 @@ body {
 
     5. MASTER-CLASSES
 ============================================================================= */
-/* ============================================================================
-   Create CSS Triangles
-============================================================================ */
 .l-global-header,
 .l-global-footer,
 .region-main__content,
@@ -874,13 +856,614 @@ body {
 }
 
 /* ============================================================================
+    Import from plugin-support.scss
+
+    6. PLUGINS SUPPORT  
+============================================================================= */
+/* Custom Forms ----------------------*/
+form.custom {
+  /* Custom input, disabled */
+}
+form.custom span.custom {
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  position: relative;
+  top: 2px;
+  border: solid 1px #ccc;
+  background: #fff;
+  cursor: pointer;
+}
+form.custom span.custom.radio {
+  -moz-border-radius: 100%;
+  -webkit-border-radius: 100%;
+  -o-border-radius: 100%;
+  border-radius: 100%;
+  -webkit-background-clip: padding-box;
+}
+form.custom span.custom.checkbox:before {
+  content: "\00d7";
+  display: block;
+  line-height: 0.8;
+  height: 12px;
+  width: 12px;
+  text-align: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-size: 13px;
+  color: #fff;
+}
+form.custom span.custom.radio.checked:before {
+  content: "";
+  display: block;
+  width: 8px;
+  height: 8px;
+  -moz-border-radius: 100%;
+  -webkit-border-radius: 100%;
+  -o-border-radius: 100%;
+  border-radius: 100%;
+  -webkit-background-clip: padding-box;
+  background: #222;
+  position: relative;
+  top: 2px;
+  left: 2px;
+}
+form.custom span.custom.checkbox.checked:before {
+  color: #222;
+}
+form.custom div.custom.dropdown {
+  display: block;
+  position: relative;
+  width: auto;
+  height: 1.4em;
+  margin-bottom: 9px;
+  margin-top: 2px;
+}
+form.custom div.custom.dropdown a.current {
+  display: block;
+  width: auto;
+  height: 1.4em;
+  line-height: 1.4em;
+  text-decoration: none;
+  padding: 0 21px 0 6px;
+  border: 1px solid;
+  border-color: #777777 #cccccc #cccccc;
+  color: #434343;
+  background-color: #fff;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+form.custom div.custom.dropdown a.selector {
+  position: absolute;
+  width: 20px;
+  height: 1.4em;
+  display: block;
+  right: 0;
+  top: 0;
+  border: solid 1px;
+  border-color: #777777 #cccccc #cccccc;
+  background-color: #fff;
+}
+form.custom div.custom.dropdown a.selector:after {
+  content: "";
+  display: block;
+  content: "";
+  display: block;
+  width: 0;
+  height: 0;
+  border: solid 5px;
+  border-color: #aaaaaa transparent transparent transparent;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin-top: -2px;
+  margin-left: -5px;
+}
+form.custom div.custom.dropdown:hover a.current,
+form.custom div.custom.dropdown:hover a.selector, form.custom div.custom.dropdown.open a.current, form.custom div.custom.dropdown.open a.selector {
+  border-color: #777;
+}
+form.custom div.custom.dropdown:hover a.selector:after, form.custom div.custom.dropdown.open a.selector:after {
+  content: "";
+  display: block;
+  width: 0;
+  height: 0;
+  border: solid 5px;
+  border-color: #222222 transparent transparent transparent;
+}
+form.custom div.custom.dropdown.open ul {
+  display: block;
+  z-index: 10;
+}
+form.custom div.custom.dropdown.small {
+  width: 134px !important;
+}
+form.custom div.custom.dropdown.medium {
+  width: 254px !important;
+}
+form.custom div.custom.dropdown.large {
+  width: 434px !important;
+}
+form.custom div.custom.dropdown.expand {
+  width: 100% !important;
+}
+form.custom div.custom.dropdown.open.small ul {
+  width: 134px !important;
+}
+form.custom div.custom.dropdown.open.medium ul {
+  width: 254px !important;
+}
+form.custom div.custom.dropdown.open.large ul {
+  width: 434px !important;
+}
+form.custom div.custom.dropdown.open.expand ul {
+  width: 100% !important;
+}
+form.custom div.custom.dropdown ul {
+  position: absolute;
+  width: auto;
+  display: none;
+  margin: 0;
+  left: 0;
+  top: 22px;
+  margin: 0;
+  padding: 0;
+  background: #fff;
+  background: rgba(255, 255, 255, 0.95);
+  box-shadow: 0 6px 16px rgba(0, 0, 0, 0.22);
+  border: 1px solid transparent;
+}
+form.custom div.custom.dropdown ul li {
+  color: #555;
+  cursor: pointer;
+  padding: 3px 38px 3px 6px;
+  min-height: 16px;
+  line-height: 16px;
+  margin: 0;
+  white-space: nowrap;
+  list-style: none;
+}
+form.custom div.custom.dropdown ul li.selected {
+  background: darkgrey;
+  color: #000;
+}
+form.custom div.custom.dropdown ul li:hover {
+  background-color: #b6b6b6;
+  color: #222;
+}
+form.custom div.custom.dropdown ul li.selected:hover {
+  background: darkgrey;
+  cursor: default;
+  color: #000;
+}
+form.custom div.custom.dropdown ul.show {
+  display: block;
+}
+form.custom .custom.disabled {
+  background-color: #ddd;
+}
+
+/* Correct FF custom dropdown height */
+/*
+* FancyBox - jQuery Plugin
+* Simple and fancy lightbox alternative
+*
+ * Examples and documentation at: http://fancybox.net
+ *
+ * Copyright (c) 2008 - 2010 Janis Skarnelis
+ * That said, it is hardly a one-person project. Many people have submitted bugs, code, and offered their advice freely. Their support is greatly appreciated.
+ *
+ * Version: 1.3.4 (11/11/2010)
+ * Requires: jQuery v1.3+
+ *
+ * Dual licensed under the MIT and GPL licenses:
+ *   http://www.opensource.org/licenses/mit-license.php
+ *   http://www.gnu.org/licenses/gpl.html
+ */
+#fancybox-loading {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 40px;
+  height: 40px;
+  margin-top: -20px;
+  margin-left: -20px;
+  cursor: pointer;
+  overflow: hidden;
+  z-index: 1104;
+  display: none;
+}
+
+#fancybox-loading div {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 40px;
+  height: 480px;
+  background-image: url("../images/fancybox/fancybox.png");
+}
+
+#fancybox-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1100;
+  display: none;
+}
+
+#fancybox-tmp {
+  padding: 0;
+  margin: 0;
+  border: 0;
+  overflow: auto;
+  display: none;
+}
+
+#fancybox-wrap {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 20px;
+  z-index: 1101;
+  outline: none;
+  display: none;
+}
+
+#fancybox-outer {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background: #fff;
+}
+
+#fancybox-content {
+  width: 0;
+  height: 0;
+  padding: 0;
+  outline: none;
+  position: relative;
+  overflow: hidden;
+  z-index: 1102;
+  border: 0px solid #000;
+}
+
+#fancybox-hide-sel-frame {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  z-index: 1101;
+}
+
+#fancybox-close {
+  position: absolute;
+  top: -15px;
+  right: -15px;
+  width: 30px;
+  height: 30px;
+  background: transparent url("../images/fancybox/fancybox.png") -40px 0px;
+  cursor: pointer;
+  z-index: 1103;
+  display: none;
+}
+
+#fancybox-error {
+  color: #444;
+  font: normal 12px/20px Arial;
+  padding: 14px;
+  margin: 0;
+}
+
+#fancybox-img {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  border: none;
+  outline: none;
+  line-height: 0;
+  vertical-align: top;
+}
+
+#fancybox-frame {
+  width: 100%;
+  height: 100%;
+  border: none;
+  display: block;
+}
+
+#fancybox-left, #fancybox-right {
+  position: absolute;
+  bottom: 0px;
+  height: 100%;
+  width: 35%;
+  cursor: pointer;
+  outline: none;
+  background: transparent url("../images/fancybox/blank.gif");
+  z-index: 1102;
+  display: none;
+}
+
+#fancybox-left {
+  left: 0px;
+}
+
+#fancybox-right {
+  right: 0px;
+}
+
+#fancybox-left-ico, #fancybox-right-ico {
+  position: absolute;
+  top: 50%;
+  left: -9999px;
+  width: 30px;
+  height: 30px;
+  margin-top: -15px;
+  cursor: pointer;
+  z-index: 1102;
+  display: block;
+}
+
+#fancybox-left-ico {
+  background-image: url("../images/fancybox/fancybox.png");
+  background-position: -40px -30px;
+}
+
+#fancybox-right-ico {
+  background-image: url("../images/fancybox/fancybox.png");
+  background-position: -40px -60px;
+}
+
+#fancybox-left:hover, #fancybox-right:hover {
+  visibility: visible;
+  /* IE6 */
+}
+
+#fancybox-left:hover span {
+  left: 20px;
+}
+
+#fancybox-right:hover span {
+  left: auto;
+  right: 20px;
+}
+
+.fancybox-bg {
+  position: absolute;
+  padding: 0;
+  margin: 0;
+  border: 0;
+  width: 20px;
+  height: 20px;
+  z-index: 1001;
+}
+
+#fancybox-bg-n {
+  top: -20px;
+  left: 0;
+  width: 100%;
+  background-image: url("../images/fancybox/fancybox-x.png");
+}
+
+#fancybox-bg-ne {
+  top: -20px;
+  right: -20px;
+  background-image: url("../images/fancybox/fancybox.png");
+  background-position: -40px -162px;
+}
+
+#fancybox-bg-e {
+  top: 0;
+  right: -20px;
+  height: 100%;
+  background-image: url("../images/fancybox/fancybox-y.png");
+  background-position: -20px 0px;
+}
+
+#fancybox-bg-se {
+  bottom: -20px;
+  right: -20px;
+  background-image: url("../images/fancybox/fancybox.png");
+  background-position: -40px -182px;
+}
+
+#fancybox-bg-s {
+  bottom: -20px;
+  left: 0;
+  width: 100%;
+  background-image: url("../images/fancybox/fancybox-x.png");
+  background-position: 0px -20px;
+}
+
+#fancybox-bg-sw {
+  bottom: -20px;
+  left: -20px;
+  background-image: url("../images/fancybox/fancybox.png");
+  background-position: -40px -142px;
+}
+
+#fancybox-bg-w {
+  top: 0;
+  left: -20px;
+  height: 100%;
+  background-image: url("../images/fancybox/fancybox-y.png");
+}
+
+#fancybox-bg-nw {
+  top: -20px;
+  left: -20px;
+  background-image: url("../images/fancybox/fancybox.png");
+  background-position: -40px -122px;
+}
+
+#fancybox-title {
+  font-family: Helvetica;
+  font-size: 12px;
+  z-index: 1102;
+}
+
+.fancybox-title-inside {
+  padding-bottom: 10px;
+  text-align: center;
+  color: #333;
+  background: #fff;
+  position: relative;
+}
+
+.fancybox-title-outside {
+  padding-top: 10px;
+  color: #fff;
+}
+
+.fancybox-title-over {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  color: #FFF;
+  text-align: left;
+}
+
+#fancybox-title-over {
+  padding: 10px;
+  background-image: url("../images/fancybox/fancy_title_over.png");
+  display: block;
+}
+
+.fancybox-title-float {
+  position: absolute;
+  left: 0;
+  bottom: -20px;
+  height: 32px;
+}
+
+#fancybox-title-float-wrap {
+  border: none;
+  border-collapse: collapse;
+  width: auto;
+}
+
+#fancybox-title-float-wrap td {
+  border: none;
+  white-space: nowrap;
+}
+
+#fancybox-title-float-left {
+  padding: 0 0 0 15px;
+  background: url("../images/fancybox/fancybox.png") -40px -90px no-repeat;
+}
+
+#fancybox-title-float-main {
+  color: #FFF;
+  line-height: 29px;
+  font-weight: bold;
+  padding: 0 0 3px 0;
+  background: url("../images/fancybox/fancybox-x.png") 0px -40px;
+}
+
+#fancybox-title-float-right {
+  padding: 0 0 0 15px;
+  background: url("../images/fancybox/fancybox.png") -55px -90px no-repeat;
+}
+
+/* IE6 */
+.fancybox-ie6 #fancybox-close {
+  background: transparent;
+  filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src = 'images/fancybox/fancy_close.png', sizingMethod = 'scale');
+}
+
+.fancybox-ie6 #fancybox-left-ico {
+  background: transparent;
+  filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src = 'images/fancybox/fancy_nav_left.png', sizingMethod = 'scale');
+}
+
+.fancybox-ie6 #fancybox-right-ico {
+  background: transparent;
+  filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src = 'images/fancybox/fancy_nav_right.png', sizingMethod = 'scale');
+}
+
+.fancybox-ie6 #fancybox-title-over {
+  background: transparent;
+  filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src = 'images/fancybox/fancy_title_over.png', sizingMethod = 'scale');
+  zoom: 1;
+}
+
+.fancybox-ie6 #fancybox-title-float-left {
+  background: transparent;
+  filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src = 'images/fancybox/fancy_title_left.png', sizingMethod = 'scale');
+}
+
+.fancybox-ie6 #fancybox-title-float-main {
+  background: transparent;
+  filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src = 'images/fancybox/fancy_title_main.png', sizingMethod = 'scale');
+}
+
+.fancybox-ie6 #fancybox-title-float-right {
+  background: transparent;
+  filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src = 'images/fancybox/fancy_title_right.png', sizingMethod = 'scale');
+}
+
+.fancybox-ie6 #fancybox-bg-w, .fancybox-ie6 #fancybox-bg-e, .fancybox-ie6 #fancybox-left, .fancybox-ie6 #fancybox-right, #fancybox-hide-sel-frame {
+  height: expression(this.parentNode.clientHeight + "px");
+}
+
+#fancybox-loading.fancybox-ie6 {
+  position: absolute;
+  margin-top: 0;
+  top: expression((-20 + (document.documentElement.clientHeight ? document.documentElement.clientHeight/2 : document.body.clientHeight/2 ) + ( ignoreMe = document.documentElement.scrollTop ? document.documentElement.scrollTop : document.body.scrollTop )) + 'px');
+}
+
+#fancybox-loading.fancybox-ie6 div {
+  background: transparent;
+  filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src = 'images/fancybox/fancy_loading.png', sizingMethod = 'scale');
+}
+
+/* IE6, IE7, IE8 */
+.fancybox-ie .fancybox-bg {
+  background: transparent !important;
+}
+
+.fancybox-ie #fancybox-bg-n {
+  filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src = 'images/fancybox/fancy_shadow_n.png', sizingMethod = 'scale');
+}
+
+.fancybox-ie #fancybox-bg-ne {
+  filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src = 'images/fancybox/fancy_shadow_ne.png', sizingMethod = 'scale');
+}
+
+.fancybox-ie #fancybox-bg-e {
+  filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src = 'images/fancybox/fancy_shadow_e.png', sizingMethod = 'scale');
+}
+
+.fancybox-ie #fancybox-bg-se {
+  filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src = 'images/fancybox/fancy_shadow_se.png', sizingMethod = 'scale');
+}
+
+.fancybox-ie #fancybox-bg-s {
+  filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src = 'images/fancybox/fancy_shadow_s.png', sizingMethod = 'scale');
+}
+
+.fancybox-ie #fancybox-bg-sw {
+  filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src = 'images/fancybox/fancy_shadow_sw.png', sizingMethod = 'scale');
+}
+
+.fancybox-ie #fancybox-bg-w {
+  filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src = 'images/fancybox/fancy_shadow_w.png', sizingMethod = 'scale');
+}
+
+.fancybox-ie #fancybox-bg-nw {
+  filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src = 'images/fancybox/fancy_shadow_nw.png', sizingMethod = 'scale');
+}
+
+/* ============================================================================
     Import from print.scss 
     
     4. MEDIA PRINT
 ============================================================================= */
-/* ============================================================================
-   Create CSS Triangles
-============================================================================ */
 @media print {
   /* some general resets */
   @page {
