--- a/sass/ie-old.scss
+++ b/sass/ie-old.scss
@@ -4,7 +4,7 @@
     ie-support
 ============================================================================= */
 
-button {
-    behavior: url(js/PIE.htc);
-    position: relative;
-}
+// button {
+//     behavior: url(js/PIE.htc);
+//     position: relative;
+// }
