--- a/sass/style.scss
+++ b/sass/style.scss
@@ -11,6 +11,6 @@
 @import "layout";
 @import "common";
 @import "masterclasses";
-//@import "plugin-support";
+@import "plugin-support";
 //@import "screen";
 @import "print";
