--- a/sass/_plugin-support.scss
+++ b/sass/_plugin-support.scss
@@ -6,261 +6,222 @@
 
 @import "mixins";
 
-/* ============================================================================
-    Select box plugin support
-============================================================================= */
+/* Custom Forms ----------------------*/
 
-/* applied to original <select> to hide */
-.has_sb {
-  position: absolute;
-  left: -999999em;
-  text-indent: -999999em;
-}
+form.custom {
 
-/* always visible styles */
-.selectbox {
-  display: inline-block;
-  position: relative;
-  font-size: 1em;
-  margin: 1px;
-  vertical-align: middle;
-  
-  .ie6-7 & {
-    display: inline;
-    zoom: 1;
+  span.custom {
+    display: inline-block;
+    width: 12px;
+    height: 12px;
+    position: relative;
+    top: 2px;
+    border: solid 1px #ccc;
+    background: #fff;
+    cursor: pointer;
+
+    &.radio { 
+      @include border-radius(100%);
+    }
+
+    &.checkbox {
+      &:before {
+        content: "\00d7";
+        display: block;
+        line-height: 0.8;
+        height: 12px;
+        width: 12px;
+        text-align: center;
+        position: absolute;
+        top: 0;
+        left: 0;
+        font-size: 13px;
+        color: #fff;
+      }
+    }
+
+    &.radio.checked {
+      &:before {
+        content: "";
+        display: block;
+        width: 8px;
+        height: 8px;
+        @include border-radius(100%);
+        background: #222;
+        position: relative;
+        top: 2px;
+        left: 2px;
+      }
+    }
+
+    &.checkbox.checked {
+      &:before {
+        color: #222;
+      }
+    }
+  }
+
+  // Custom selectbox
+
+  $input-border-color: #777 #ccc #ccc;
+
+  div.custom.dropdown {
+    display: block;
+    position: relative;
+    width: auto;
+    height: 1.4em;
+    margin-bottom: 9px;
+    margin-top: 2px;
+
+    a.current {
+      display: block;
+      width: auto;
+      height: 1.4em;
+      line-height: 1.4em;
+      text-decoration: none;
+      padding: 0 21px 0 6px;
+      border: 1px solid;
+      border-color: $input-border-color;
+      color: $baseColor;
+      background-color: #fff;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
+    a.selector {
+      position: absolute;
+      width: 20px;
+      height: 1.4em;
+      display: block;
+      right: 0;
+      top: 0;
+      border: solid 1px;
+      border-color: $input-border-color;
+      background-color: #fff;
+
+      &:after {
+        content: "";
+        display: block;
+        @include cssTriangle(5px, #aaa, top);
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        margin-top: -2px;
+        margin-left: -5px;
+      }
+    }
+
+
+    &:hover,
+    &.open {
+
+      a.current,
+      a.selector {
+        border-color: #777;
+      }
+
+      a.selector {
+        &:after {
+          @include cssTriangle(5px, #222, top);
+        }
+      }
+    }
+
+    &.open ul {
+      display: block;
+      z-index: 10;
+    }
+
+    &.small {
+      width: 134px !important;
+    }
+    &.medium {
+      width: 254px !important;
+    }
+    &.large {
+      width: 434px !important;
+    }
+    &.expand {
+      width: 100% !important;
+    }
+
+    &.open.small ul {
+      width: 134px !important;
+    }
+    &.open.medium ul {
+      width: 254px !important;
+    }
+    &.open.large ul {
+      width: 434px !important;
+    }
+    &.open.expand ul {
+      width: 100% !important;
+    }
+  }
+
+  div.custom.dropdown ul {
+    position: absolute;
+    width: auto;
+    display: none;
+    margin: 0;
+    left: 0;
+    top: 22px;
+    margin: 0;
+    padding: 0;
+    background: #fff;
+    background: rgba(#fff,0.95);
+    box-shadow: 0 6px 16px rgba(#000, 0.22);
+    border: 1px solid transparent;
+
+    li {
+      color: #555;
+      cursor: pointer;
+      padding: 3px 38px 3px 6px;
+      min-height: 16px;
+      line-height: 16px;
+      margin: 0;
+      white-space: nowrap;
+      list-style: none;
+
+      &.selected {
+        background: lighten($baseColor, 40%);
+        color: #000;
+      }
+
+      &:hover {
+        background-color: lighten($baseColor, 45%);
+        color: #222;
+      }
+
+      &.selected:hover {
+        background: lighten($baseColor, 40%);
+        cursor: default;
+        color: #000;
+      }
+    }
+
+    &.show {
+      display: block; 
+    }
+  }
+
+  /* Custom input, disabled */
+  .custom.disabled {
+    background-color: #ddd;
   }
 }
 
-.selectbox .display {
-  background: #fff;
-  border: 1px solid;
-  border-color: #500e0c;
-  cursor: default;
-  display: block;
-  font-weight: normal;
-  height: 1.8em;
-  line-height: 1.8em;
-  overflow: hidden;
-  outline: none;
-  padding: 0 24px 0 .6em;
-  position: relative;
-  text-decoration: none;
+/* Correct FF custom dropdown height */
+// @-moz-document url-prefix() {
+//   form.custom div.custom.dropdown a.selector {
+//     height: 30px;
+//   }
+// }
+// .lt-ie9 form.custom div.custom.dropdown a.selector {
+//   height: 30px;
+// }
 
-  border-radius: 4px;
-}
-
-.selectbox.disabled .display {
-  color: #999;
-}
-
-.selectbox.focused {
-  outline: 1px solid #f1b84b;
-  outline-offset: 0;
-}
-
-.selectbox.focused .display .text {
-  display: inline-block;
-  .ie6-7 & {
-    display: inline;
-    zoom: 1;
-  }
-}
-
-.selectbox .display.active {
-  border-color: #7b7d83;
-}
-
-.selectbox .display .arrow_btn {
-  display: block;
-  height: 1.15em;
-  width: 1.08em;
-  line-height: .92em;
-  padding: 1px;
-  text-align: center;
-  position: absolute;
-  top: .3em;
-  right: 0;
-}
-
-.selectbox .display .arrow_btn .arrow {
-/*background: transparent url(../images/select-arrow.gif) no-repeat center center;*/
-  display: inline-block;
-  height: 8px;
-  left: 0;
-  position: absolute;
-  top: .4em;
-  width: 13px;
-
-  .ie6-7 & {
-    display: inline;
-    zoom: 1;
-  }
-}
-
-.selectbox .value {
-  display: none;
-}
-
-/* dropdown styles */
-.selectbox.items {
-  background: #fff;
-  border: 1px solid #828790;
-  display: block;
-  font-size: 1em;
-  list-style-type: none;
-  margin: 0;
-  overflow-x: hidden;
-  overflow-y: auto;
-  padding: 0 0 1px 0;
-  z-index: 99999;
-
-  -moz-box-shadow: 0 3px 5px rgba(0, 0, 0, .5);
-  -webkit-box-shadow: 0 3px 5px rgba(0, 0, 0, .5);
-  box-shadow: 0 3px 5px rgba(0, 0, 0, .5);
-}
-
-.selectbox.items li {
-  display: block;
-  margin: 0;
-  padding: 0; /*white-space:nowrap; maybe necessary if using fixedWidth: false */
-}
-
-.selectbox.items li.first {
-  margin-top: 0;
-}
-
-.selectbox.items li>.item {
-  color: #000;
-  cursor: default;
-  display: block;
-  padding: .1em .4em;
-  text-decoration: none;
-}
-
-.selectbox.items li>.item>.text {
-  display: inline-block;
-  .ie6-7 & {
-    display: inline;
-    zoom: 1;
-  }
-}
-
-.selectbox.items li.selected>.item {
-  border-bottom: 1px dotted #999;
-  border-top: 1px dotted #999;
-}
-
-.selectbox.items li.disabled>.item {
-  color: #999;
-}
-
-.selectbox.items li.hover>.item {
-  background-color: #F0330F;
-  color: #fcfcfc;
-}
-
-.selectbox.items .value {
-  display: none;
-}
-
-/* optgroup styles */
-.selectbox.items .optgroup .items {
-  border: none;
-  margin: 0;
-  padding: 0;
-  -moz-box-shadow: none;
-  -webkit-box-shadow: none;
-}
-
-.selectbox.items .optgroup>.label {
-  cursor: default;
-  font-weight: bold;
-  line-height: 1em;
-}
-
-.selectbox.items .optgroup .items li>.item {
-  padding-left: 1em;
-}
-
-/* for optgroups */
-.selectbox.round_sb.items>li>.label {
-  line-height: 2.08em;
-  padding: 4px 6px;
-}
-
-.selectbox.round_sb.items>li>.items li>.item {
-  padding: 4px 6px 4px 12px;
-}
-
-/* fixed width example styles */
-.selectbox .display.fixed_width {
-  width: 73px;
-  padding: 0 24px 0 3px;
-}
-
-.selectbox.fixed_width.items {
-  width: 100px; /* width of display text plus the padding (60 + 27) = 87 */
-}
-
-.selectbox .display.fixed_width2 {
-  width: 60px;
-  padding: 0 24px 0 3px;
-}
-
-.selectbox.fixed_width2.items {
-  width: 300px; /* width of display text plus the padding (60 + 27) = 87 */
-}
-
-/* ============================================================================
-      Checkbox plugin support
-============================================================================= */
-
-.jquery-checkbox {
-  display: inline;
-  font-size: 20px;
-  line-height: 20px;
-  cursor: pointer;
-}
-
-.jquery-checkbox .mark {
-  display: inline;
-}
-
-.jquery-checkbox img {
-  vertical-align: middle;
-  width: 13px;
-  height: 13px;
-}
-
-.jquery-checkbox img {
-  background: transparent url(../images/checkbox.png) no-repeat;
-}
-
-.jquery-checkbox img {
-  background-position: 0px 0px;
-}
-
-.jquery-checkbox-hover img {
-  background-position: 0px -15px;
-}
-
-.jquery-checkbox-checked img {
-  background-position: 0px -31px;
-}
-
-.jquery-checkbox-checked .jquery-checkbox-hover img {
-  background-position: 0px -47px;
-}
-
-.jquery-checkbox-disabled img {
-  background-position: 0px 0px;
-  opacity: .5;
-}
-
-.jquery-checkbox-checked .jquery-checkbox-disabled img {
-  background-position: 0px 0px;
-  opacity: .5em
-}
 
 /*
 * FancyBox - jQuery Plugin
